# log-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: conventions.md  roadmap.md  security.md  v0-architecture.md
docs/explorations/: ml-pipeline.md
src/log_agent/: __init__.py  analyzer.py  llm.py  loader.py  mailer.py  main.py  watcher.py
tests/: test_analyzer.py  test_loader.py  test_mailer.py  test_main.py  test_watcher.py
tests/fixtures/: empty_log.xlsx  generate_excel.py  sample_log.xlsx
ui/: app.py
