[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-agent"
version = "0.0.0"
description = "LLM-only security log anomaly agent (v0)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "watchdog>=4.0,<5.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4,<1.0",
    "streamlit>=1.32,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
